--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,59 +1,54 @@
-name: Build and Deploy Sphinx Docs
+# This workflow will generate the docs on each push, and publish them on GitHub Pages if the branch is "main".
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the
-  # "main" branch
-  push:
-    branches: [ "main", "chore/docs" ]
-  pull_request:
-    branches: [ "main" ]
+name: docs
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+on: [push]
 
 jobs:
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    permissions:
-      contents: write
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}
-
+  build-and-deploy:
+    strategy:
+      matrix:
+        # Only use python version matching libboost_python*.so lib
+        # 3.8 for ubuntu 20.04
+        # 3.10 for ubuntu 22.04
+        # ...
+        # Unfortunately, 3.x does not work for ubuntu-latest
+        python-version: ["3.11"]
+        # poetry-version >= 1.2 is required to support groups
+        poetry-version: ["1.3.2"]
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-      - name: Install OS deps (e.g. graphviz)
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-                           graphviz
+    # https://github.com/marketplace/actions/python-poetry-action
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      - name: Check out the repository
-        uses: actions/checkout@v4
+    # https://github.com/actions/setup-python/issues/529
+    # https://github.com/actions/setup-python#caching-packages-dependencies
+    - name: Set up Python
+      uses: actions/setup-python@main
+      with:
+        python-version: ${{ matrix.python-version }}
+        cache: 'pip'  # Caching dependencies
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-          # TODO: cache: 'pip' # caching pip dependencies
+    - name: Run image
+      uses: abatilo/actions-poetry@v2
+      with:
+        poetry-version: ${{ matrix.poetry-version }}
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install ".[tests]"  # Install Sphinx and any extensions
+    - name: Install package
+      run: |
+         poetry install --with docs
 
-      - name: Build Sphinx documentation
-        run: |
-          cd docs
-          make html
+    - name: Build Sphinx documentation
+      run: |
+        #sphinx-build -a -E -b html docs build
+        poetry run sphinx-build -a -E -b html docs build
 
-      - name: Copy badges to HTML
-        run: |
-          cp -R docs/badges docs/_build/html/
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/_build/html
+    - name: Deploy Sphinx documentation on Github Pages
+      uses: JamesIves/github-pages-deploy-action@3.7.1
+      if: github.ref == 'refs/heads/main'
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: build/
