setup.cfg: fix bumpversion

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,8 @@ commit = True
 tag = True
 
 [bumpversion:file:src/sphinx_uml/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
 
 [bumpversion:file:pyproject.toml]
 search = version = '{current_version}'
