--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ build-backend = "poetry.core.masonry.api"
 name = "sphinx-uml"
 description = "Build UML diagrams in the documentation."
 readme = "README.md"
-license = {text = "GPLv3"}
+license = {text = "BSD-3"}
 authors = [
     {name = "Marc-Olivier Buob", email = "marc-olivier.buob@nokia-bell-labs.com"},
 ]
