--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -27,6 +27,8 @@ build:
       # https://python-poetry.org/docs/managing-dependencies/#dependency-groups
       # Readthedoc and poetry
       - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry install --with docs
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry run sphinx-apidoc -f -o docs/ src/ --separate
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry run sphinx-build -b html docs/ docs/_build/html
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
